--- a/_includes/themes/wayne/tags.html
+++ b/_includes/themes/wayne/tags.html
@@ -13,7 +13,7 @@
 
     <ul class="listing">
     {% for tag in site.tags %}
-      <li class="listing-seperator" id="{{ tag[0] }}-ref">{{ tag[0] }}</li>
+      <div class="anchorouter"><a href="#{{ tag[0] }}-ref" class="anchor"><span class="icon-hand-right anchor"></span></a><li class="listing-seperator" id="{{ tag[0] }}-ref">{{ tag[0] }}</li></div>
     {% for post in tag[1] %}
       <li class="listing-item">
       <time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ post.date | date:"%Y-%m-%d" }}</time>
