--- a/_includes/themes/wayne/categories.html
+++ b/_includes/themes/wayne/categories.html
@@ -17,7 +17,7 @@
     {% for post in node[1] %}
       <li class="listing-item">
       <time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ post.date | date:"%Y-%m-%d" }}</time>
-      <a data-fragment=".vcontent" id="catepage_post_{{ post.pid }}" class="pjax" href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
+      <a class="pjax" href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
       </li>
     {% endfor %}
     {% endfor %}
