--- a/_includes/themes/wayne/index.html
+++ b/_includes/themes/wayne/index.html
@@ -1,10 +1,8 @@
-<div id="outer">
-  <div id="inner">
-  <ul class="homelisting">
+<ul>
   {% for post in paginator.posts %}
   <div class="content article">
     <div class="title">
-      <h2><a data-fragment=".vcontent" id="index_post_{{ post.pid }}" class="pjax" href="{{ post.url }}">{{ post.title }}</a></h2>
+      <h2><a class="pjax" href="{{ post.url }}">{{ post.title }}</a></h2>
     </div>
     <div class="meta">
     <span class="time">
@@ -13,7 +11,7 @@
     {% if post.tags %}
     <span class="tags">
       {% for tag in post.tags %}
-      <a class="pjax" id="index_{{ post.pid }}_{{ tag }}" data-fragment=".vcontent" href="/tags.html#{{ tag }}-ref" title="{{ tag }}">#{{ tag }}</a>
+      <a class="pjax" href="/tags.html#{{ tag }}-ref" title="{{ tag }}">#{{ tag }}</a>
       {% endfor %}
     </span>
     {% endif %}
@@ -23,24 +21,20 @@
     </div>
   </div>
   {% endfor %}
-  <div class="overmap"></div>
   </ul>
-  </div>
-
   {% if paginator.total_pages > 1 %}
         <div id="pagination">
             <div class="paginator-list">
                 {% for page in (1..paginator.total_pages) %}
-                <a data-fragment="ul.homelisting" id="index_page_{{ page }}" class="pjax num{% if page == paginator.page %} current{% endif %}" href="/{%if page > 1 %}page{{ page }}/{% endif %}">{{ page }}</a>
+                <a class="pjax num{% if page == paginator.page %} current{% endif %}" href="/{%if page > 1 %}page{{ page }}/{% endif %}">{{ page }}</a>
                 {% endfor %}
             </div>
         </div>
     {% endif %}
   <div class="center">
-    <a href="{{ site.JB.archive_path }}" id="index_archive_circle" data-fragment=".vcontent" class="circle-wrapper pjax">
+    <a href="{{ site.JB.archive_path }}" class="circle-wrapper pjax">
       <div class="circle">&nbsp;</div>
       <div class="circle">&nbsp;</div>
       <div class="circle">&nbsp;</div>
     </a>
   </div>
-</div>
