--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -22,7 +22,7 @@
         <div id="main" role="main">
             <div id="outheader">
                 <div id="header" class="clearfix">
-                    <h1><a title="{{ site.title }}" href="/">{{ site.title }}</a></h1>
+                    <h1><a title="{{ site.title }}" class="pjax" href="/">{{ site.title }}</a></h1>
                     <div class="floatnav">
                         <span><a title="Archive" class="pjax" href="{{ site.JB.archive_path }}">Archive</a></span>
                         <span><a title="Tags" class="pjax" href="{{ site.JB.tags_path }}">Tags</a></span>
