--- a/assets/themes/wayne/css/style.css
+++ b/assets/themes/wayne/css/style.css
@@ -130,11 +130,12 @@ div.floatnav a:hover {
 
 div.fixnav {
   width: 20px;
+  z-index: 99;
   margin: 0 auto;
   padding: 1px 0;
   text-align: right;
   position: fixed;
-  top: 1em;
+  top: 6em;
   right: 2em;
 }
 
@@ -609,4 +610,12 @@ span.anchor{
   margin-left: 2px;
   float:left;
   line-height: 16px;
+}
+
+#forkme{
+  width:149px;
+  height:110px;
+  position: fixed;
+  top:0;right:0;
+  background: url(../images/forkme.png) right top no-repeat;
 }
