--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </div> <!-- main -->
-        <div id="loading"><img src="{{ ASSET_PATH }}/images/loading2.gif" alt="loading"><span>正在加载,请请稍候...</span></div>
+        <div id="loading"><img src="{{ ASSET_PATH }}/images/loading2.gif" alt="loading"><span>正在加载,请稍候...</span></div>
         <a id="forkme" title="Fork me on GitHub" target="_blank" href="https://github.com/VitoLau/VitoLau.github.io"></a>
         <div id="updown">
             <span><a class="icon-angle-up" id="up" title="up"></a></span>
