--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -27,6 +27,7 @@
                         <span><a title="Archive" class="pjax" href="{{ site.JB.archive_path }}">Archive</a></span>
                         <span><a title="Tags" class="pjax" href="{{ site.JB.tags_path }}">Tags</a></span>
                         <span><a title="Categories" class="pjax" href="{{ site.JB.categories_path }}">Categories</a></span>
+                        <span><a title="Links" class="pjax" href="{{ site.JB.links_path }}">Links</a></span>
                         <span><a title="About" class="pjax" href="{{ site.JB.about_path }}">About</a></span>
                         <span><a title="Subscribe" target="_blank" href="{{ site.JB.rss_path }}">Feed</a></span>
                     </div>
@@ -36,6 +37,7 @@
                     <span><a title="Archive" class="icon-list-ul pjax" href="{{ site.JB.archive_path }}"></a></span>
                     <span><a title="Tags" class="icon-tags pjax" href="{{ site.JB.tags_path }}"></a></span>
                     <span><a title="Categories" class="icon-bookmark pjax" href="{{ site.JB.categories_path }}"></a></span>
+                    <span><a title="Links" class="icon-link pjax" href="{{ site.JB.links_path }}"></a></span>
                     <span><a title="About" class="icon-user pjax" href="{{ site.JB.about_path }}"></a></span>
                     <span><a title="Subscribe" target="_blank" class="icon-rss" href="{{ site.JB.rss_path }}"></a></span>
                 </div>
