--- a/assets/themes/wayne/css/style.css
+++ b/assets/themes/wayne/css/style.css
@@ -635,3 +635,19 @@ span.anchor{
   background: #eee;
   margin-right: 15px;
 }
+body:before{
+  content: "";
+  position: fixed;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  height: 8px;
+  z-index: 100;
+  background: -webkit-radial-gradient(50% 0, farthest-side, rgba(0, 0, 0, .2), transparent);
+  background: -moz-radial-gradient(50% 0, farthest-side, rgba(0, 0, 0, .2), transparent);
+  background: -o-radial-gradient(50% 0, farthest-side, rgba(0, 0, 0, .2), transparent);
+  background: -ms-radial-gradient(50% 0, farthest-side, rgba(0, 0, 0, .2), transparent);
+  background: radial-gradient(50% 0, farthest-side, rgba(0, 0, 0, .2), transparent);
+  background-size: 100% 8px;
+  background-repeat: no-repeat;
+}
