--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -60,7 +60,7 @@
         <a id="forkme" title="Fork me on GitHub" target="_blank" href="https://github.com/VitoLau/VitoLau.github.io"></a>
         <div id="updown">
             <span><a class="icon-angle-up" id="up" title="up"></a></span>
-            <span><a class="icon-reply" id="reply" title="Reply"></a></span>
+            <span><a class="icon-reply" id="reply" style="display:none;" title="Reply"></a></span>
             <span><a class="icon-angle-down" id="down" class="down"></a></span>
         </div>
         <script type="text/javascript" src="{{ ASSET_PATH }}/js/highlight.pack.js"></script>
