--- a/_includes/themes/wayne/post.html
+++ b/_includes/themes/wayne/post.html
@@ -32,7 +32,7 @@
 {% if page.previous or page.next %}
 <div id="page_nav">
     {% if page.previous %}
-    <a class="pjax" href='{{page.previous.url}}'>← Previous</a>
+    <a class="pjax" href='{{page.previous.url}}'>← Prev</a>
     {% endif %}
     {% if page.next %}
     <a class="pjax" href='{{page.next.url}}'>Next →</a>
