--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta name="baidu-site-verification" content="aYLjN7BTqK4xisIH" />
         <meta name="author" content="{{ site.author.name }}" />
         <meta name="generator" content="Jekyll" />
         <meta name="keywords" content="{% if page.keywords and page.keywords != '' %}{{ page.keywords }}{% else %}{{ site.keywords }}{% endif %}" />
