--- a/assets/themes/wayne/css/style.css
+++ b/assets/themes/wayne/css/style.css
@@ -243,7 +243,7 @@ div.fixnav a:hover {
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(255,255,255,0.7);
+  background: rgba(255,255,255,0.8);
 }
 
 #vinner{
@@ -673,7 +673,7 @@ span.anchor{
   position: fixed;
   top:50%;
   left:50%;
-  background: rgba(255,255,255,0.6);
+  /*background: rgba(255,255,255,0.6);*/
   margin-left:-100px;
   margin-top: -30px; 
   z-index: 999999
@@ -683,7 +683,7 @@ span.anchor{
   line-height: 16px;
 }
 #loading span{
-  color:#333;
+  color:#222;
   font-size: 14px;
   margin-left: 2px;
   float:left;
