--- a/_includes/themes/wayne/categories.html
+++ b/_includes/themes/wayne/categories.html
@@ -7,13 +7,13 @@
   <div class="post">
     <div id='tag_cloud'>
     {% for node in site.categories %}
-    <a href="#{{ node[0] }}-ref" title="{{ node[0] }}" rel="{{ node[1].size }}">{{ node[0] }}</a>
+    <a href="#{{ node[0] }}" title="{{ node[0] }}" rel="{{ node[1].size }}">{{ node[0] }}</a>
     {% endfor %}
     </div>
 
     <ul class="listing">
     {% for node in site.categories %}
-      <div class="anchorouter"><a href="#{{ node[0] }}-ref" class="anchor"><span class="icon-hand-right anchor"></span></a><li class="listing-seperator" id="{{ node[0] }}-ref">{{ node[0] }}</li></div>
+      <div class="anchorouter"><a href="#{{ node[0] }}" class="anchor"><span class="icon-hand-right anchor"></span></a><li class="listing-seperator" id="{{ node[0] }}">{{ node[0] }}</li></div>
     {% for post in node[1] %}
       <li class="listing-item">
       <time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ post.date | date:"%Y-%m-%d" }}</time>
