--- a/_includes/themes/wayne/index.html
+++ b/_includes/themes/wayne/index.html
@@ -10,7 +10,7 @@
   {% if post.tags %}
   <span class="tags">
     {% for tag in post.tags %}
-    <a class="pjax" href="/tags.html#{{ tag }}-ref" title="{{ tag }}">#{{ tag }}</a>
+    <a class="pjax" href="/tags.html#{{ tag }}" title="{{ tag }}">#{{ tag }}</a>
     {% endfor %}
   </span>
   {% endif %}
