--- a/_includes/themes/wayne/post.html
+++ b/_includes/themes/wayne/post.html
@@ -9,7 +9,7 @@
         {% if page.tags %}
         <span class="tags">
             {% for tag in page.tags %}
-            <a class="pjax" href="{{site.JB.tags_path}}#{{ tag }}-ref" title="{{ tag }}">#{{ tag }}</a>
+            <a class="pjax" href="{{site.JB.tags_path}}#{{ tag }}" title="{{ tag }}">#{{ tag }}</a>
             {% endfor %}
         </span>
         {% endif %}
