update overmap CSS

--- a/assets/themes/wayne/css/style.css
+++ b/assets/themes/wayne/css/style.css
@@ -239,8 +239,8 @@ div.fixnav a:hover {
   z-index: 99999;
   display: none;
   position: absolute;
-  top:0;
-  bottom: 0;
+  top:30px;
+  bottom: 30px;
   left: 0;
   right: 0;
   background: rgba(255,255,255,0.8);
