--- a/_includes/themes/wayne/archive.html
+++ b/_includes/themes/wayne/archive.html
@@ -14,7 +14,7 @@
       {% endif %}
       <li class="listing-item">
         <time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ post.date | date:"%Y-%m-%d" }}</time>
-        <a class="pjax" href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
+        <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
       </li>
     {% endfor %}
     </ul>
