--- a/_includes/themes/wayne/index.html
+++ b/_includes/themes/wayne/index.html
@@ -1,7 +1,7 @@
 {% for post in paginator.posts %}
 <div class="content article">
   <div class="title">
-    <h2><a class="pjax" href="{{ post.url }}">{{ post.title }}</a></h2>
+    <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
   </div>
   <div class="meta">
   <span class="time">
@@ -10,7 +10,7 @@
   {% if post.tags %}
   <span class="tags">
     {% for tag in post.tags %}
-    <a class="pjax" href="/tags.html#{{ tag }}" title="{{ tag }}">#{{ tag }}</a>
+    <a href="/tags.html#{{ tag }}" title="{{ tag }}">#{{ tag }}</a>
     {% endfor %}
   </span>
   {% endif %}
@@ -24,13 +24,13 @@
       <div id="pagination">
           <div class="paginator-list">
               {% for page in (1..paginator.total_pages) %}
-              <a class="pjax num{% if page == paginator.page %} current{% endif %}" href="/{%if page > 1 %}page{{ page }}/{% endif %}">{{ page }}</a>
+              <a class="num{% if page == paginator.page %} current{% endif %}" href="/{%if page > 1 %}page{{ page }}/{% endif %}">{{ page }}</a>
               {% endfor %}
           </div>
       </div>
   {% endif %}
 <div class="center">
-  <a href="{{ site.JB.archive_path }}" class="circle-wrapper pjax">
+  <a href="{{ site.JB.archive_path }}" class="circle-wrapper">
     <div class="circle">&nbsp;</div>
     <div class="circle">&nbsp;</div>
     <div class="circle">&nbsp;</div>
