--- a/_includes/themes/wayne/tags.html
+++ b/_includes/themes/wayne/tags.html
@@ -17,7 +17,7 @@
     {% for post in tag[1] %}
       <li class="listing-item">
       <time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ post.date | date:"%Y-%m-%d" }}</time>
-      <a class="pjax" href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
+      <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
       </li>
     {% endfor %}
     {% endfor %}
