--- a/_includes/themes/wayne/about.html
+++ b/_includes/themes/wayne/about.html
@@ -8,8 +8,19 @@
   {{ content }}
   </div>
   {% if page.comment %}
-      <div class="comment" data-thread="{{page.pid}}"></div>
+    <div class="ds-thread comment" data-thread-key="{{page.pid}}"></div>
+    <script type="text/javascript">
+        var duoshuoQuery = {short_name:'{{ site.JB.comments.duoshuo.short_name }}'};
+            (function() {
+                var ds = document.createElement('script');
+                ds.type = 'text/javascript';ds.async = true;
+                ds.src = 'http://static.duoshuo.com/embed.js';
+                ds.charset = 'UTF-8';
+                (document.getElementsByTagName('head')[0] 
+                || document.getElementsByTagName('body')[0]).appendChild(ds);
+            })();
+    </script>
   {% else %}
-      <div class="comment"><hr /><p>评论已关闭</p></div>
+    <div class="comment"><hr /><p>评论已关闭</p></div>
   {% endif %}
 </div>
