show comment icon

--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -59,7 +59,7 @@
         <a id="forkme" title="Fork me on GitHub" target="_blank" href="https://github.com/Jeremial/Jeremial.github.io"></a>
         <div id="updown">
             <span><a class="icon-angle-up" id="up" title="up"></a></span>
-            {% if page.comment %}
+            {% if page.comments %}
             <span><a class="icon-comment" id="reply" title="Reply"></a></span>
             {% endif %}
             <span><a class="icon-angle-down" id="down" class="down"></a></span>
