remove useless css code,remove some htmlcode for pjax, and update structure

--- a/assets/themes/wayne/css/style.css
+++ b/assets/themes/wayne/css/style.css
@@ -157,7 +157,7 @@ ol, ul {
 }
 
 #header {
-  width: 680px;
+  width: 760px;
   margin: 0 auto;
   /*margin: 5em auto 4em auto;*/
   text-align: center;
@@ -228,39 +228,14 @@ div.fixnav a:hover {
   color: #333333;
 }
 
-#vouter{
-  width:680px;
-  margin: 0 auto;
-  position: relative;
-  overflow: hidden;
-}
-
-#vouter .overmap{
-  z-index: 99999;
-  display: none;
-  position: absolute;
-  top:30px;
-  bottom: 30px;
-  left: 0;
-  right: 0;
-  background: rgba(255,255,255,0.8);
-}
-
-#vinner{
-  width:2040px;
-  position: relative;
-  left:-680px;
-}
-
-.vcontent {
-  width: 680px;
-  float:left;
-  margin-left: 680px;
+.content {
+  width: 760px;
+  margin:0 auto;
   font-size: 1.1em;
   line-height: 1.7em;
 }
 
-.vcontent .article {
+.content .article {
   padding: 1.25em 24px;
   background-color: #ffffff;
   border: 1px solid #e0e0e0;
@@ -273,74 +248,26 @@ div.fixnav a:hover {
   float:none !important;
 }*/
 
-.vcontent a {
+.content a {
   color: #3399cc;
 }
 
-.vcontent a:hover {
+.content a:hover {
   color: #55bbee;
 }
 
-.vcontent .post img {
-  max-width: 630px;
+.content .post img {
+  max-width: 710px;
   display: block;
   box-shadow: #999999 0px 8px 4px -4px;
   margin: 0.5em auto;
 }
 
-.vcontent .post .image-700 {
-  margin-left: -28px;
-  margin-right: -28px;
-  display: block;
-}
-
-.vcontent .post .image-800 {
-  margin-left: -28px;
-  margin-right: -28px;
-  display: block;
-}
-
-.vcontent .post .image-900 {
-  margin-left: -28px;
-  margin-right: -28px;
-  display: block;
-}
-
-.vcontent .post .image-1000 {
-  margin-left: -28px;
-  margin-right: -28px;
-  display: block;
-}
-
-.vcontent .post .image-1100 {
-  margin-left: -28px;
-  margin-right: -28px;
-  display: block;
-}
-
-.vcontent .post .image-1200 {
-  margin-left: -28px;
-  margin-right: -28px;
-  display: block;
-}
-
-.vcontent .post .image-1300 {
-  margin-left: -28px;
-  margin-right: -28px;
-  display: block;
-}
-
-.vcontent .post .image-1400 {
-  margin-left: -28px;
-  margin-right: -28px;
-  display: block;
-}
-
-.vcontent p {
+.content p {
   padding: 0.7em 0;
 }
 
-.vcontent pre code {
+.content pre code {
   margin: 1em -25px 1em -25px;
   padding-left: 25px;
   padding-right: 25px;
@@ -356,7 +283,7 @@ div.fixnav a:hover {
   overflow: auto;
 }
 
-.vcontent blockquote {
+.content blockquote {
   display: block;
   text-align: justify;
   border-left: 4px solid #eeeeee;
@@ -364,48 +291,48 @@ div.fixnav a:hover {
   padding-left: 1.5em;
 }
 
-.vcontent blockquote p {
+.content blockquote p {
   margin: 0;
   padding: 0;
 }
 
-.vcontent li.listing-item, .vcontent li.listing-seperator {
+.content li.listing-item, .content li.listing-seperator {
   list-style-type: none;
   padding: 0;
 }
 
-.vcontent li.listing-item a, .vcontent li.listing-seperator a {
+.content li.listing-item a, .content li.listing-seperator a {
   padding: 0.2em 1em;
 }
 
-.vcontent li.listing-item time, .vcontent li.listing-seperator time {
+.content li.listing-item time, .content li.listing-seperator time {
   color: #999999;
 }
 
-.vcontent li.listing-seperator {
+.content li.listing-seperator {
   font-weight: bold;
 }
 
-.vcontent .meta {
+.content .meta {
   color: #c0c0c0;
   margin: 0.25em 0 1em;
 }
 
-.vcontent .meta .tags a {
+.content .meta .tags a {
   color: #c0c0c0;
   padding: .25em;
 }
 
-.vcontent .meta .tags a:hover {
+.content .meta .tags a:hover {
   color: #999999;
 }
 
-.vcontent #page_nav {
+.content #page_nav {
   text-align: center;
   margin: 2em 0;
 }
 
-.vcontent #page_nav a {
+.content #page_nav a {
   font-family: "Coda", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
   font-size: .8em;
   padding: 0.25em 1em;
@@ -415,7 +342,7 @@ div.fixnav a:hover {
   text-transform: uppercase;
 }
 
-.vcontent #page_nav a:hover {
+.content #page_nav a:hover {
   background-color: #e6e6e6;
 }
 
@@ -471,11 +398,9 @@ hr {
 }
 
 #footer {
-  width: 680px;
-  margin: 0 auto;
-  display: block;
   font-family: "Balthazar";
-  font-size: .9em;
+  font-size: 1em;
+  line-height: 1.2em;
   text-align: center;
   color: #909090;
 }
@@ -555,89 +480,6 @@ li[id*='dsq-like-'] {
   margin-left: 10px;
 }
 
-/*slimbox*/
-#lbOverlay {
-  position: fixed;
-  z-index: 999;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #000;
-  cursor: pointer
-}
-
-#lbCenter,#lbBottomContainer {
-  position: absolute;
-  z-index: 9999;
-  overflow: hidden;
-  background-color: #fff
-}
-
-.lbLoading {
-  background: #fff url(../images/loading.gif) no-repeat center
-}
-
-#lbImage {
-  position: absolute;
-  left: 0;
-  top: 0;
-  border: 10px solid #fff;
-  background-repeat: no-repeat
-}
-
-#lbPrevLink,#lbNextLink {
-  display: block;
-  position: absolute;
-  top: 0;
-  width: 50%;
-  outline: none
-}
-
-#lbPrevLink {
-  left: 0
-}
-
-#lbPrevLink:hover {
-  background: transparent url(../images/prevlabel.gif) no-repeat 0 15%
-}
-
-#lbNextLink {
-  right: 0
-}
-
-#lbNextLink:hover {
-  background: transparent url(../images/nextlabel.gif) no-repeat 100% 15%
-}
-
-#lbBottom {
-  font-family: Verdana, Arial, Geneva, Helvetica, sans-serif;
-  font-size: 10px;
-  color: #666;
-  line-height: 1.4em;
-  text-align: left;
-  border: 10px solid #fff;
-  border-top-style: none
-}
-
-#lbCloseLink {
-  display: block;
-  float: right;
-  width: 66px;
-  height: 22px;
-  background: transparent url(../images/closelabel.gif) no-repeat center;
-  margin: 5px 0;
-  outline: none
-}
-
-#lbCaption,#lbNumber {
-  margin-right: 71px
-}
-
-#lbCaption {
-  font-weight: 700
-}
-
 div.anchorouter{
   margin-left: -20px;
   position: relative;
@@ -664,30 +506,6 @@ span.anchor{
   font-size: 16px;
   width:16px;
   height:16px;
-}
-
-#loading{
-  display: none;
-  height:16px;
-  line-height: 16px;
-  position: fixed;
-  top:50%;
-  left:50%;
-  /*background: rgba(255,255,255,0.6);*/
-  margin-left:-100px;
-  margin-top: -30px; 
-  z-index: 999999
-}
-#loading img{
-  float:left;
-  line-height: 16px;
-}
-#loading span{
-  color:#222;
-  font-size: 14px;
-  margin-left: 2px;
-  float:left;
-  line-height: 16px;
 }
 
 #forkme{
