--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -19,43 +19,35 @@
     </head>
     <body>
         <div id="main" role="main">
-            <div id="outheader">
-                <div id="header" class="clearfix">
-                    <h1><a title="{{ site.title }}" href="/">{{ site.title }}</a></h1>
-                    <div class="floatnav">
-                        <span><a title="Archive" href="{{ site.JB.archive_path }}">Archive</a></span>
-                        <span><a title="Tags" href="{{ site.JB.tags_path }}">Tags</a></span>
-                        <span><a title="Categories" href="{{ site.JB.categories_path }}">Categories</a></span>
-                        <span><a title="Links" href="{{ site.JB.links_path }}">Links</a></span>
-                        <span><a title="About" href="{{ site.JB.about_path }}">About</a></span>
-                        <span><a title="Subscribe" target="_blank" href="{{ site.JB.rss_path }}">Feed</a></span>
-                    </div>
-                </div>
-                <div class="fixnav">
-                    <span><a title="Home" class="icon-home" href="/"></a></span>
-                    <span><a title="Archive" class="icon-list" href="{{ site.JB.archive_path }}"></a></span>
-                    <span><a title="Tags" class="icon-tags" href="{{ site.JB.tags_path }}"></a></span>
-                    <span><a title="Categories" class="icon-bookmark" href="{{ site.JB.categories_path }}"></a></span>
-                    <span><a title="Links" class="icon-link" href="{{ site.JB.links_path }}"></a></span>
-                    <span><a title="About" class="icon-user" href="{{ site.JB.about_path }}"></a></span>
-                    <span><a title="Subscribe" target="_blank" class="icon-rss" href="{{ site.JB.rss_path }}"></a></span>
+            <div id="header" class="clearfix">
+                <h1><a title="{{ site.title }}" href="/">{{ site.title }}</a></h1>
+                <div class="floatnav">
+                    <span><a title="Archive" href="{{ site.JB.archive_path }}">Archive</a></span>
+                    <span><a title="Tags" href="{{ site.JB.tags_path }}">Tags</a></span>
+                    <span><a title="Categories" href="{{ site.JB.categories_path }}">Categories</a></span>
+                    <span><a title="Links" href="{{ site.JB.links_path }}">Links</a></span>
+                    <span><a title="About" href="{{ site.JB.about_path }}">About</a></span>
+                    <span><a title="Subscribe" target="_blank" href="{{ site.JB.rss_path }}">Feed</a></span>
                 </div>
             </div>
-            <div id="vouter">
-                <div id="vinner">
-                    <div class="vcontent">
-                    {{ content }}
-                    </div>
-                </div>
-                <div class="overmap"></div>
+            <div class="fixnav">
+                <span><a title="Home" class="icon-home" href="/"></a></span>
+                <span><a title="Archive" class="icon-list" href="{{ site.JB.archive_path }}"></a></span>
+                <span><a title="Tags" class="icon-tags" href="{{ site.JB.tags_path }}"></a></span>
+                <span><a title="Categories" class="icon-bookmark" href="{{ site.JB.categories_path }}"></a></span>
+                <span><a title="Links" class="icon-link" href="{{ site.JB.links_path }}"></a></span>
+                <span><a title="About" class="icon-user" href="{{ site.JB.about_path }}"></a></span>
+                <span><a title="Subscribe" target="_blank" class="icon-rss" href="{{ site.JB.rss_path }}"></a></span>
             </div>
-            <div id="footer">
+            <div class="content">
+            {{ content }}
+            </div>
+            <div id="footer" class="content">
                 <div>
                     &copy; 2011-2013 自说Me话 | powered by jekyll <br /> themed by <a href="http://lhzhang.com" target="_blank" title="sext v">sext v</a> | Modified by <a href="http://ISayme.com">Jeremial</a> for Jekyllbootstrap
                 </div>
             </div>
         </div> <!-- main -->
-        <div id="loading"><img src="{{ ASSET_PATH }}/images/loading2.gif" alt="loading"><span>正在加载,请稍候...</span></div>
         <a id="forkme" title="Fork me on GitHub" target="_blank" href="https://github.com/Jeremial/Jeremial.github.io"></a>
         <div id="updown">
             <span><a class="icon-angle-up" id="up" title="up"></a></span>
