--- a/_includes/themes/wayne/index.html
+++ b/_includes/themes/wayne/index.html
@@ -1,5 +1,5 @@
 {% for post in paginator.posts %}
-<div class="content article">
+<div class="article">
   <div class="title">
     <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
   </div>
