--- a/_includes/themes/wayne/index.html
+++ b/_includes/themes/wayne/index.html
@@ -4,16 +4,25 @@
     <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
   </div>
   <div class="meta">
-  <span class="time">
-    <time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ post.date | date:"%Y-%m-%d" }}</time>
-  </span>
-  {% if post.tags %}
-  <span class="tags">
-    {% for tag in post.tags %}
-    <a href="/tags.html#{{ tag }}" title="{{ tag }}">#{{ tag }}</a>
-    {% endfor %}
-  </span>
-  {% endif %}
+    <span class="time">
+      <time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ post.date | date:"%Y-%m-%d" }}</time>
+    </span>
+    {% if post.categories %}
+    <span class="categories">
+      <span class="icon-bookmark" title="Categories"></span>
+      {% for category in post.categories %}
+      <a href="{{site.JB.categories_path}}#{{ category }}" title="{{ category }}">{{ category }}</a>
+      {% endfor %}
+    </span>
+    {% endif %}
+    {% if post.tags %}
+    <span class="tags">
+      <span class="icon-tags" title="Tags"></span>
+      {% for tag in post.tags %}
+      <a href="{{site.JB.tags_path}}#{{ tag }}" title="{{ tag }}">#{{ tag }}</a>
+      {% endfor %}
+    </span>
+    {% endif %}
   </div>
   <div class="post">
   {{ post.content }}
