--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -57,6 +57,14 @@
             <span><a class="icon-angle-down scroll" href="#footer" title="down"></a></span>
         </div>
         <script type="text/javascript" src="{{ ASSET_PATH }}/js/smooth-scroll.js"></script>
-        {% include JB/analytics %}
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-50848533-1', 'isay.me');
+          ga('send', 'pageview');
+        </script>
     </body>
 </html>
