--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="baidu-site-verification" content="aYLjN7BTqK4xisIH" />
+        <meta property="qc:admins" content="07210670311655" />
         <meta property="wb:webmaster" content="20367955236e84bd" />
         <meta name="author" content="{{ site.author.name }}" />
         <meta name="generator" content="Jekyll" />
