--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -46,11 +46,11 @@
             </div>
             <div id="footer" class="content">
                 <div>
-                    &copy; 2011-2014 自说Me话 | powered by jekyll <br /> themed by <a href="http://lhzhang.com" target="_blank" title="sext v">sext v</a> | Modified by <a href="http://ISayme.com">Jeremial</a> for Jekyllbootstrap
+                    &copy; 2011-2014 自说Me话 | powered by jekyll <br /> themed by <a href="http://lhzhang.com" target="_blank" title="sext v">sext v</a> | Modified by <a href="http://ISayme.com">Treri</a> for Jekyllbootstrap
                 </div>
             </div>
         </div> <!-- main -->
-        <a id="forkme" title="Fork me on GitHub" target="_blank" href="https://github.com/Jeremial/Jeremial.github.io"></a>
+        <a id="forkme" title="Fork me on GitHub" target="_blank" href="https://github.com/Treri/treri.github.io"></a>
         <div id="updown">
             <span><a class="icon-angle-up scroll" href="#main" title="up"></a></span>
             {% if page.comments %}
