--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -46,7 +46,7 @@
             </div>
             <div id="footer" class="content">
                 <div>
-                    &copy; 2011-2014 自说Me话 | powered by jekyll <br /> themed by <a href="http://lhzhang.com" target="_blank" title="sext v">sext v</a> | Modified by <a href="http://ISayme.com">Treri</a> for Jekyllbootstrap
+                    &copy; 2011-2015 自说Me话 | powered by jekyll <br /> themed by <a href="http://lhzhang.com" target="_blank" title="sext v">sext v</a> | Modified by <a href="http://ISay.me">Treri</a> for Jekyllbootstrap
                 </div>
             </div>
         </div> <!-- main -->
