--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -48,6 +48,9 @@
                 <div>
                     &copy; 2011-2015 自说Me话 | powered by jekyll <br /> themed by <a href="http://lhzhang.com" target="_blank" title="sext v">sext v</a> | Modified by <a href="http://ISay.me">Treri</a> for Jekyllbootstrap
                 </div>
+                <div style="text-align: center">
+                    <a href="http://www.miitbeian.gov.cn/">鲁ICP备15008571号-1</a>
+                </div>
             </div>
         </div> <!-- main -->
         <a id="forkme" title="Fork me on GitHub" target="_blank" href="https://github.com/Treri/treri.github.io"></a>
