--- a/_includes/themes/wayne/default.html
+++ b/_includes/themes/wayne/default.html
@@ -32,7 +32,7 @@
                     <span><a title="Subscribe" target="_blank" href="{{ site.JB.rss_path }}">Feed</a></span>
                 </div>
             </div>
-            <div class="fixnav">
+            <!-- <div class="fixnav">
                 <span><a title="Home" class="icon-home" href="/"></a></span>
                 <span><a title="Archive" class="icon-list" href="{{ site.JB.archive_path }}"></a></span>
                 <span><a title="Tags" class="icon-tags" href="{{ site.JB.tags_path }}"></a></span>
@@ -40,7 +40,7 @@
                 <span><a title="Links" class="icon-link" href="{{ site.JB.links_path }}"></a></span>
                 <span><a title="About" class="icon-user" href="{{ site.JB.about_path }}"></a></span>
                 <span><a title="Subscribe" target="_blank" class="icon-rss" href="{{ site.JB.rss_path }}"></a></span>
-            </div>
+            </div> -->
             <div class="content">
             {{ content }}
             </div>
